# opa-quotes-api

./: .env.example  AGENTS.md  Dockerfile  INSTALL.md  README.md  ROADMAP.md  SETUP_STATUS.md  docker-compose.test.yml  docker-compose.yml  opa-quotes-api.code-workspace  pyproject.toml
.github/: CI_CD.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ECOSYSTEM_CONTEXT.md  WEBSOCKET_API.md
docs/examples/: websocket-client.html
init-db/: 01-init-timescale.sh  02-create-real-time-table.sql  README.md
scripts/benchmark/: ws_latency_benchmark.py
scripts/docker/: docker-cleanup.ps1  docker-health.ps1  docker-logs.ps1  docker-reset.ps1
scripts/validation/: test_websocket_opa506.py
src/opa_quotes_api/: __init__.py  config.py  database.py  dependencies.py  dev_server.py  logging_setup.py  main.py  schemas.py
src/opa_quotes_api/middleware/: __init__.py  circuit_breaker.py  rate_limit.py
src/opa_quotes_api/repository/: models.py  quote_repository.py
src/opa_quotes_api/routers/: __init__.py  quotes.py  websocket.py
src/opa_quotes_api/services/: cache_service.py  capacity_subscriber.py  quote_service.py
tests/: __init__.py  test_batch_create.py  test_capacity_enrichment.py  test_circuit_breaker.py  test_health.py  test_metrics.py  test_rate_limiting.py  test_routers.py  test_schemas.py  test_websocket.py
