[tool.poetry]
name = "opa-quotes-api"
version = "0.1.0"
description = "FastAPI REST + WebSockets para cotizaciones en tiempo real"
authors = ["OPA Team <oscar@opa-machine.com>"]
readme = "README.md"
packages = [{include = "opa_quotes_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12,<3.13"  # Fixed by OPA-63
pydantic = "^2.5"
pydantic-settings = "^2.1"
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.31"
alembic = "^1.13"
pyyaml = "^6.0"
tenacity = "^9.1"
prometheus-client = "^0.19"
fastapi = ">=0.104"
uvicorn = {version = ">=0.24", extras = ["standard"]}
redis = ">=5.0"
opa-shared-utils = { git = "https://github.com/Ocaxtar/opa-shared-utils.git", tag = "v0.1.1" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^4.1"
pytest-asyncio = "^1.3"
ruff = "^0.1"
mypy = "^1.7"
httpx = "^0.28"  # For testing
bandit = "^1.7"
safety = "^3.0"

[tool.poetry.scripts]
opa_quotes_api = "opa_quotes_api.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
